--- a/src/layouts/Management.css
+++ b/src/layouts/Management.css
@@ -13,6 +13,10 @@
     background: #47CFFF;
 }
 
+.managementBlock{
+    /* box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px; */
+}
+
 
 @media screen and (max-width: 768px) {
     .managementSection{
