--- a/src/layouts/TestimonialCarousel.css
+++ b/src/layouts/TestimonialCarousel.css
@@ -1,5 +1,5 @@
-@import "~slick-carousel/slick/slick.css";
-@import "~slick-carousel/slick/slick-theme.css";
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
 
 .carousel-container {
   background-color: #1f1f1f;
@@ -8,6 +8,15 @@
   text-align: center;
 }
 
+.testimonial-card{
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: url(./../assets/images/pattern_img2.png);
+  background-repeat: no-repeat;
+  background-size: 100% 60%;
+}
 .profile-pic {
   border-radius: 50%;
   width: 100px;
@@ -38,9 +47,45 @@
   display: flex;
   justify-content: space-around;
   margin-top: 40px;
+  border-top: 1px solid var(--border-color);
   font-size: 14px;
+  padding-top: 40px;
 }
 
 .stats div strong {
   font-size: 20px;
+}
+
+.slick-arrow{
+   width: 40px;
+   height: 40px;
+   border-radius: 100%;
+}
+.slick-arrow.slick-next{
+  border-top: 1px solid #c9c8c8;
+  border-right: 1px solid #c9c8c8;
+  transform: rotate(45deg);
+}
+
+.slick-arrow.slick-next::before{
+  transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  display: flex;
+  transform-origin: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.slick-arrow.slick-prev{
+  border-top: 1px solid #c9c8c8;
+  border-left: 1px solid #c9c8c8;
+  transform: rotate(321deg);
+}
+
+.slick-arrow.slick-prev::before{
+  transform: rotate(45deg);
+  display: flex;
+  transform-origin: center;
+  align-items: center;
+  justify-content: center;
 }
